Fix overflow showing when it's not needed

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,8 @@
 .content {
   width: 100%;
   padding: 20px;
-  min-height: 100vh;
-  max-height: 100vh;
+  min-height: 100%;
+  max-height: 100%;
   transition: all 0.3s;
 }
 
